# 1MillionUsd

./: Diamound Wave Raver  README.md  WaveRider  liberty  liberty 01  liberty 04  libery 03  pyproject.toml  setup.py
config_files/: FileConfig.json  best_asset.npy  vld_trend.json
docs/: index.md
millionusd/: IQOptionClient.py  test.py  test2.py  test3.py
millionusd/candles/: Candle.py  CandlePatternIdentifier.py  IQOptionBinaryCandleReader.py  IQOptionCandleReader.py  IQOptionDigitalCandleReader.py
millionusd/engine/: AssetAnalyzer.py  CandlerAnalyzer.py  ConfigFileManager.py  Engine.py  IndicatorAnalyzer.py  PatternAnalyze.py  Pattner_Validate.py  TradingBot5s.py  Trend_Engine.py
millionusd/indicators/: AssetAnalyzer.py  CandleAnalyzer.py
millionusd/machine/: ForexTradingModel.py
millionusd/riskManager/: IQOptionRiskManager.py  RiskManagerConfigFile.txt  RiskSettingsLoader.py
millionusd/trader/: IQOptionTrader.py
scripts/: setup_env.sh
trading_bot_env/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill  wsdump.py
